added velocity and temperature fields to config

--- a/backend/python/wop-config.json
+++ b/backend/python/wop-config.json
@@ -18,7 +18,8 @@
           1,
           1,
           0.2
-        ]
+        ],
+        "temperature": 450.0
       }
     },
     "windows": {
@@ -32,6 +33,12 @@
           0.75,
           0,
           0.625
+        ],
+        "temperature": 293.15,
+        "velocity": [
+          0,
+          0,
+          0
         ]
       }
     },
@@ -46,6 +53,12 @@
           0.75,
           4,
           0.25
+        ],
+        "temperature": 293.15,
+        "velocity": [
+          0,
+          0,
+          0
         ]
       }
     },
@@ -70,7 +83,8 @@
         0,
         0,
         0
-      ]
+      ],
+      "temperature": 293.15
     }
   }
 }
