--- a/backend/python/wop-config.json
+++ b/backend/python/wop-config.json
@@ -19,6 +19,11 @@
           1,
           0.2
         ],
+        "rotation": [
+          0,
+          0,
+          0
+        ],
         "temperature": 450.0
       }
     },
@@ -33,6 +38,11 @@
           0.75,
           0,
           0.625
+        ],
+        "rotation": [
+          0,
+          0,
+          0
         ],
         "temperature": 293.15,
         "velocity": [
@@ -53,6 +63,11 @@
           0.75,
           4,
           0.25
+        ],
+        "rotation": [
+          0,
+          0,
+          0
         ],
         "temperature": 293.15,
         "velocity": [
@@ -80,6 +95,11 @@
         2.5
       ],
       "location": [
+        0,
+        0,
+        0
+      ],
+      "rotation": [
         0,
         0,
         0
