added template key

--- a/backend/python/wop-config.json
+++ b/backend/python/wop-config.json
@@ -26,6 +26,7 @@
           0,
           0
         ],
+        "template": "",
         "temperature": 450.0
       }
     },
@@ -46,6 +47,7 @@
           0,
           0
         ],
+        "template": "",
         "temperature": 293.15,
         "velocity": [
           0,
@@ -71,6 +73,7 @@
           0,
           0
         ],
+        "template": "",
         "temperature": 293.15,
         "velocity": [
           0,
@@ -106,6 +109,7 @@
         0,
         0
       ],
+      "template": "",
       "temperature": 293.15
     }
   }
