--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node index.js",
+    "start": "node dist/index.js",
     "buildAndStart": "tsc && node index.js"
   }
 }
