--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -23,7 +23,8 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.9",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "wot-thing-description-types": "^1.1.0-11-November-2021"
   },
   "scripts": {
     "build": "tsc",
