--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
     environment:
       - PYTHON_SERVER=http://wop_backend_python:5000
     depends_on:
-      - backend_python
+      - backend-python
     container_name: wop_backend_nodejs 
     networks:
       - wop-network
