--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^16.11.9",
+    "form-data": "^4.0.0",
     "typescript": "^4.5.2",
     "wot-thing-description-types": "^1.1.0-11-November-2021"
   },
