--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "buildAndStart": "tsc && node index.js"
+    "buildAndStart": "tsc && node index.js",
+    "applyWorkaround": "tsc src/workaround.ts --outDir \"dist\" && node dist/workaround.js"
   }
 }
