--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -16,6 +16,7 @@
     "@node-wot/binding-http": "^0.7.8",
     "@node-wot/core": "^0.7.8",
     "axios": "^0.24.0",
+    "glob": "^7.2.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
     "typescript-mix": "^3.1.3",
@@ -30,7 +31,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "buildAndStart": "tsc && node index.js",
+    "buildAndStart": "tsc && node dist/index.js",
     "applyWorkaround": "tsc src/workaround.ts --outDir \"dist\" && node dist/workaround.js"
   }
 }
