--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
       context: ./backend/python
     ports:
       - 5000:5000
-      - 11111:11111
     command: "python3.8 server.py"
     container_name: wop_backend_python
     networks:
@@ -24,6 +23,10 @@ services:
     container_name: wop_backend_nodejs 
     networks:
       - wop-network
+  backend-paraview:
+    image: kitware/paraview
+    ports:
+      - 11111:11111
 networks:
   wop-network:
     driver: bridge
