flask: added foam user selection

--- a/backend/python/Dockerfile
+++ b/backend/python/Dockerfile
@@ -45,6 +45,9 @@ ENTRYPOINT ["/bin/sh", "./entrypoint.sh"]
 WORKDIR /app
 RUN chmod 777 /app
 
+# Select root
+USER foam
+
 # Install project dependencies
 COPY ./requirements.txt .
 RUN echo -e "\n\n\n********** Installing Python project dependencies **********\n\n\n" && \
