flask: moved cmd to Dockerfile and added bashrc to it

--- a/backend/python/Dockerfile
+++ b/backend/python/Dockerfile
@@ -61,3 +61,5 @@ RUN echo -e "\n\n\n********** Installing Python project dependencies **********\
 COPY . ./
 
 RUN python3.8 workaround.py
+
+CMD source /home/foam/.bashrc && python3.8 server.py
