Revert "pv: temporary removed start.sh"
This reverts commit 08d2274fa00c6980efc22ad5339f2208b6dce194.

--- a/backend/paraview/Dockerfile
+++ b/backend/paraview/Dockerfile
@@ -4,7 +4,7 @@ USER root
 COPY ./start.sh /start.sh
 RUN sed -i "s/\r$//g" /start.sh
 RUN chmod +x /start.sh
-CMD ["/bin/bash"]
+CMD ["/bin/bash", "/start.sh"]
 
 # Set work directory
 WORKDIR /wop/cases
