Revert "pvserver: switched to another image"
This reverts commit dc836ac99b32a49454138c434a5f7a46c382b151.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,10 @@ services:
     networks:
       - wop-network
   backend-paraview:
-    image: pvw-v5.6.0-osmesa
+    build:
+      context: ./backend/paraview
     ports:
-      - 11111:8080
+      - 11111:11111
     container_name: wop_backend_paraview
     volumes:
       - cases_volume:/wop/cases
