pvserver: fixed paths

--- a/backend/paraview/config.json
+++ b/backend/paraview/config.json
@@ -3,11 +3,11 @@
     "host": "0.0.0.0",
     "port": 8080,
     "endpoint": "paraview",
-    "content": "/.../www",
-    "proxy_file": "/.../proxy-mapping.txt",
+    "content": "/opt/www",
+    "proxy_file": "/opt/proxy-mapping.txt",
     "sessionURL": "ws://${host}:${port}/ws",
     "timeout": 25,
-    "log_dir": "/.../logs",
+    "log_dir": "/opt/logs",
     "upload_dir": "/wop/cases",
     "fields": [
       "file",
