pvserver: updated add entrypoints

--- a/backend/paraview/Dockerfile
+++ b/backend/paraview/Dockerfile
@@ -1,3 +1,7 @@
 FROM kitware/paraviewweb:pvw-v5.7.0-rc2-osmesa
 
 COPY ./config.json /pvw/launcher/config.json
+
+RUN ["/opt/paraviewweb/scripts/addEndpoints.sh", \
+  "visualizer", "/opt/paraview/share/paraview-5.6/web/visualizer/www" \
+]
