pvserver: added entrypoints

--- a/backend/paraview/Dockerfile
+++ b/backend/paraview/Dockerfile
@@ -5,3 +5,5 @@ COPY ./config.json /pvw/launcher/config.json
 RUN ["/opt/paraviewweb/scripts/addEndpoints.sh", \
   "visualizer", "/opt/paraview/share/paraview-5.6/web/visualizer/www" \
 ]
+
+ENTRYPOINT ["/opt/paraviewweb/scripts/start.sh"]
