pvserver: updated config

--- a/backend/paraview/Dockerfile
+++ b/backend/paraview/Dockerfile
@@ -1,9 +1,9 @@
 FROM kitware/paraviewweb:pvw-v5.7.0-rc2-osmesa
 
-COPY ./config.json /pvw/launcher/config.json
+COPY ./config-template.json /opt/launcher/config-template.json
 
 RUN ["/opt/paraviewweb/scripts/addEndpoints.sh", \
   "visualizer", "/opt/paraview/share/paraview-5.6/web/visualizer/www" \
 ]
 
-ENTRYPOINT ["/opt/paraviewweb/scripts/start.sh"]
+COPY ./start.sh /opt/paraviewweb/scripts/
