--- a/backend/paraview/Dockerfile
+++ b/backend/paraview/Dockerfile
@@ -1,6 +1,6 @@
 FROM kitware/paraviewweb:pvw-v5.7.0-rc2-osmesa
 
-COPY ./config-template.json /opt/launcher/config.json
+COPY ./config-template.json /pvw/launcher/config.json
 
 RUN ["/opt/paraviewweb/scripts/addEndpoints.sh", \
   "visualizer", "/opt/paraview/share/paraview-5.6/web/visualizer/www" \
