pvserver: switched to data dir

--- a/backend/paraview/server/launcher.json
+++ b/backend/paraview/server/launcher.json
@@ -38,7 +38,7 @@
         "${secret}",
         "--server",
         "--data",
-        "/data"
+        "/wop/cases"
       ],
       "ready_line": "Starting factory"
     },
