pvserver: fixed path

--- a/backend/paraview/setup/apps.yml
+++ b/backend/paraview/setup/apps.yml
@@ -16,7 +16,7 @@ PyWebVue: # Default app under /index.html
     - ${secret}
     - --server
     - --data
-    - /data
+    - /wop/cases
 Visualizer: # /Visualizer.html or /?name=Visualizer&data=...
   app: pv-visualizer
   cmd:
