--- a/backend/paraview/Dockerfile
+++ b/backend/paraview/Dockerfile
@@ -1,13 +1,9 @@
-FROM kitware/trame:1.2-glvnd-runtime-ubuntu20.04-py39
-
-# Create the /deploy directory with trame-user as the owner
-RUN install -d -o trame-user -g trame-user /deploy
+FROM ubuntu:20.04
 
 # Install ParaView-OSMesa
 ARG PV_URL=https://www.paraview.org/files/v5.10/ParaView-5.10.0-osmesa-MPI-Linux-Python3.9-x86_64.tar.gz
 RUN mkdir -p /opt/paraview && cd /opt/paraview && wget -qO- $PV_URL | tar --strip-components=1 -xzv
-# Needed for PV 5.10.0 but not in 5.10.1
-COPY ./setup/trame.py /opt/paraview/lib/python3.9/site-packages/paraview/apps/
 
-# Copy the server directory
-COPY --chown=trame-user:trame-user ./server /deploy/server
+RUN cp ./start.sh ./opt/paraview/start.sh
+
+ENTRYPOINT ["/opt/paraview/start.sh"]
