--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,13 +33,28 @@ services:
     build:
       context: ./backend/paraview
     ports:
-      - 11111:80
+      - 11111:11111
+    environment:
+      - CORES=8
     container_name: wop_backend_paraview
     volumes:
       - cases_volume:/wop/cases
+      - paraview_volume:/opt/paraview
+  frontend-paraview:
+    build:
+      context: ./frontend/paraview
+    ports:
+      - 11112:80
+    container_name: wop_frontend_paraview
+    volumes:
+      - cases_volume:/wop/cases
+      - paraview_volume:/opt/paraview
+    depends_on:
+      - backend-paraview
 
 volumes:
   cases_volume:
+  paraview_volume:
 
 networks:
   wop-network:
