pvfront: added missing script

--- a/frontend/paraview/Dockerfile
+++ b/frontend/paraview/Dockerfile
@@ -1,5 +1,8 @@
 FROM kitware/trame:1.2-glvnd-runtime-ubuntu20.04-py39
 
+# Needed for PV 5.10.0 but not in 5.10.1
+COPY ./setup/trame.py /opt/paraview/lib/python3.9/site-packages/paraview/apps/
+
 # Create the /deploy directory with trame-user as the owner
 RUN install -d -o trame-user -g trame-user /deploy
 
