pvback: updated docker

--- a/backend/paraview/Dockerfile
+++ b/backend/paraview/Dockerfile
@@ -1,20 +1,8 @@
-FROM ubuntu:20.04
-
-# Install any extra things that might be need
-RUN apt-get update \
-	&& apt-get install -y \
-		vim \
-		ssh \
-		sudo \
-		wget \
-		software-properties-common ;\
-		rm -rf /var/lib/apt/lists/*
+FROM kitware/trame:1.2-glvnd-runtime-ubuntu20.04-py39
 
 # Install ParaView-OSMesa
 ARG PV_URL=https://www.paraview.org/files/v5.10/ParaView-5.10.0-osmesa-MPI-Linux-Python3.9-x86_64.tar.gz
 RUN mkdir -p /opt/paraview && cd /opt/paraview && wget -qO- $PV_URL | tar --strip-components=1 -xzv
-
-RUN apt-get install -y libglvnd-dev
 
 COPY ./start.sh ./start.sh
 
