--- a/frontend/paraview/Dockerfile
+++ b/frontend/paraview/Dockerfile
@@ -1,5 +1,6 @@
 FROM kitware/trame:1.2-glvnd-runtime-ubuntu20.04-py39
 
+RUN mkdir -p /opt/paraview
 # Needed for PV 5.10.0 but not in 5.10.1
 COPY ./setup/trame.py /opt/paraview/lib/python3.9/site-packages/paraview/apps/
 
