--- a/backend/paraview/Dockerfile
+++ b/backend/paraview/Dockerfile
@@ -1,8 +1,4 @@
-FROM kitware/trame:1.2-glvnd-runtime-ubuntu20.04-py39
-
-# Install ParaView-OSMesa
-ARG PV_URL=https://www.paraview.org/files/v5.10/ParaView-5.10.0-osmesa-MPI-Linux-Python3.9-x86_64.tar.gz
-RUN mkdir -p /opt/paraview && cd /opt/paraview && wget -qO- $PV_URL | tar --strip-components=1 -xzv
+FROM kitware/paraviewweb:pv-v5.6.0-osmesa
 
 COPY ./start.sh ./start.sh
 
