--- a/evaluation/package.json
+++ b/evaluation/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@node-wot/binding-http": "^0.7.8",
     "@node-wot/core": "^0.7.8",
+    "csv-writer": "^1.6.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
     "typescript-mix": "^3.1.3",
