--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,15 +42,15 @@ services:
   evaluation:
     build:
       context: ./evaluation
+      args:
+        - BASE_URL=http://wop_backend_nodejs:8080
+        - MESH_STEP=10
+        - MAX_CORES=12
+        - HEATERS=1
+        - ACS=1
+        - WINDOWS=1
+        - DOORS=1
     tty: true
-    environment:
-      - BASE_URL=http://wop_backend_nodejs:8080
-      - MESH_STEP=10
-      - MAX_CORES=12
-      - HEATERS=1
-      - ACS=1
-      - WINDOWS=1
-      - DOORS=1
     networks:
       - wop-network
     depends_on:
