--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     build:
       context: ./evaluation
       args:
-        - BASE_URL=http://wop_backend_nodejs:8080
+        - HOST=http://wop_backend_nodejs:8080
         - MESH_STEP=10
         - MAX_CORES=12
         - HEATERS=1
