evaluation: changed boolean env

--- a/evaluation/.env.example
+++ b/evaluation/.env.example
@@ -1,7 +1,7 @@
 HOST=http://wop_backend_nodejs:8080
 MESH_STEP=10
 MAX_CORES=12
-HEATERS=true
-ACS=true
-WINDOWS=true
-DOORS=true
+HEATERS=1
+ACS=1
+WINDOWS=1
+DOORS=1
