--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - backend-nodejs
     container_name: wop_evaluation
     volumes:
-      - ./evaluation/results:./results
+      - ./evaluation/results:/app
 
 volumes:
   cases_volume:
