--- a/backend/python/Dockerfile
+++ b/backend/python/Dockerfile
@@ -50,6 +50,7 @@ ENTRYPOINT ["./entrypoint.sh"]
 RUN usermod -G root foam
 RUN mkdir -p /wop/cases
 RUN chown -R foam:foam /wop/cases
+RUN chmod +rw /wop/cases
 USER foam
 
 # Install project dependencies
