--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -16,6 +16,7 @@
     "@node-wot/binding-http": "^0.7.8",
     "@node-wot/core": "^0.7.8",
     "axios": "^0.24.0",
+    "dotenv": "^16.0.0",
     "glob": "^7.2.0",
     "jsonschema": "^1.4.0",
     "merge-json-schemas": "^1.0.0",
