--- a/evaluation/.env.example
+++ b/evaluation/.env.example
@@ -1,7 +1,9 @@
 HOST=http://wop_backend_nodejs:8080
 MESH_STEP=25
+START_MESH=25
 MAX_CORES=12
 CORES_STEP=4
+START_CORES=0
 HEATERS=1
 ACS=1
 WINDOWS=1
