evaluation: added max mesh variable

--- a/evaluation/.env.example
+++ b/evaluation/.env.example
@@ -2,6 +2,7 @@ HOST=http://wop_backend_nodejs:8080
 FILENAME=all
 MESH_STEP=25
 START_MESH=25
+MAX_MESH=100
 MAX_CORES=12
 CORES_STEP=4
 START_CORES=0
