evaluation: added phyng steps

--- a/evaluation/.env.example
+++ b/evaluation/.env.example
@@ -7,9 +7,13 @@ MAX_CORES=12
 CORES_STEP=4
 START_CORES=0
 HEATERS=50
+HEATERS_STEP=1
 ACS=4
+ACS_STEP=1
 WINDOWS=9
+WINDOWS_STEP=1
 DOORS=9
+DOORS_STEP=1
 TAKE_MOST=0
 TAKE_LEAST=0
 NUM_OF_TIMES=1
